Add maven-compiler-plugin configuration to pom.xml and improve release.yml formatting